# ParallelSoup

./: .gitignore  README.md  package.md  setup.cfg
docs/: develop.md  release.md
src/parallelsoup/: __init__.py
tests/: imdbTest.py  pstest.py  read.txt
tools/: release.sh  test.sh
