[metadata]
name = parallelsoup
version = 0.0.1
author = Sarthak Pranesh
author_email = sarthakpranesh08@gmail.com
description = A library that utilizes BeautifulSoup to provide multi threaded scrapping, reducing the total time involved in the scrapping process
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sarthakpranesh/ParallelSoup
project_urls =
    Bug Tracker = https://github.com/sarthakpranesh/ParallelSoup/issues     
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
